# CPP_Project_Minimal_Example

./: CMakeLists.txt  main.cpp  my_json_module.cxx
Glaze/: CMakeLists.txt
